--- a/templates/AssignmentPages(Emily)/Assignment.css
+++ b/templates/AssignmentPages(Emily)/Assignment.css
@@ -141,9 +141,9 @@ input[type="range"]::-webkit-slider-thumb {
   appearance: none;
 
   background-color: #EEEEEE;
-  height: 4rem;
+  height: 40px;
   width: 1rem;  
-  border-radius: 30px;
+  border-radius: 20px;
   overflow: visible;
 }
 
@@ -166,8 +166,6 @@ input[type="range"]:focus {
 /* Chrome, Safari, Opera, and Edge Chromium */
 input[type="range"]:focus::-webkit-slider-thumb {
   border: 1px solid #000000;
-  outline: 1.5px solid #000000;
-  outline-offset: 0.125rem;
 }
 
 /* Firefox */
