gathered all code

--- a/src/App.css
+++ b/src/App.css
@@ -261,3 +261,230 @@ body {
   border: 1px solid #FF002E;
   filter: drop-shadow(0vh 0.42vh 0.42vh rgba(255, 0, 46, 0.5));
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 32%;
+  height: 85%;
+  transform: translate(-50%, -50%);
+
+  background-color: #FFFFFF;
+  padding: 1.5%;
+  box-shadow: 0px 0px 7.5px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+
+  display: grid;
+  grid-template-rows: 91% 7%;
+  row-gap: 2%;
+}
+
+.my-form {
+  display: grid;
+  grid-template-columns: 27% 35% 35%;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 5fr;
+  row-gap: 1%;
+}
+
+.form-label {
+  grid-column: 1 / 1;
+  padding: 10%;
+
+  font-family: 'Segoe UI';
+  font-style: italic;
+  font-size: 22px;
+  font-weight: 200;
+  letter-spacing: 0.03em;
+
+  color: #000000;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.asterisk-color {
+  color: #881C1C;
+}
+
+.form-input {
+  grid-column: 2 / 4;
+  margin: 1%;
+  padding: 10px;
+
+  background: #FFFFFF;
+  border: 1px;
+  box-shadow: 0px 0.5px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+
+  font-family: 'Segoe UI';
+  font-style: italic;
+  font-size: 18px;
+  font-weight: 200;
+  text-align: center;
+
+  color: #6C6C6C;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
+  resize: none;
+}
+
+.due-time {
+  grid-column: 2/2;
+  margin-right: 10%;
+}
+
+.due-date {
+  grid-column: 3/3;
+}
+
+.event-dropdown {
+  grid-column: 2 / 4;
+
+  background: #FFFFFF;
+  box-shadow: 0px 0.5px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+
+  font-family: 'Segoe UI';
+  font-style: italic;
+  font-size: 18px;
+  font-weight: 200;
+  text-align: center;
+
+  color: #6C6C6C;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.event-dropdown:active {
+  border: 1px solid black;
+}
+
+.button-list {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-row: 100%;
+}
+
+.button-class {
+  background: #881C1C;
+  border: none;
+  border-radius: 30px;
+  margin: 7px;
+  height: 90%;
+  width: 90%;
+
+  font-family: 'Segoe UI';
+  font-style: italic;
+  font-size: 18px;
+  font-weight: 200;
+  letter-spacing: 0.03em;
+  text-align: center;
+
+  color: #FFFFFF;
+}
+
+/***** Start Styling for Sliders *****/
+/* Source: https://www.smashingmagazine.com/2021/12/create-custom-range-input-consistent-browsers/ */
+
+input[type="range"] {
+  grid-column: 2 / 4;
+
+  -webkit-appearance: none;
+  appearance: none;
+
+  background: transparent;
+  cursor: pointer;
+  height: 40px;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: 0px 0.5px 2px rgba(0, 0, 0, 0.25);
+}
+
+/*** Thumb Styles ***/
+/* Chrome, Safari, Opera, and Edge Chromium */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+
+  background-color: #EEEEEE;
+  height: 40px;
+  width: 1rem;  
+  border-radius: 20px;
+  overflow: visible;
+}
+
+/* Firefox */
+input[type="range"]::-moz-range-thumb {
+  border: none; /*Removes extra border that FF applies*/
+  border-radius: 0; /*Removes default border-radius that FF applies*/
+
+  background-color: #EEEEEE;
+  height: 2rem;
+  width: 1rem;
+}
+
+/*** Focus Styles ***/
+/* Removes default focus */
+input[type="range"]:focus {
+  outline: none;
+}
+
+/* Chrome, Safari, Opera, and Edge Chromium */
+input[type="range"]:focus::-webkit-slider-thumb {
+  border: 1px solid #000000;
+}
+
+/* Firefox */
+input[type="range"]:focus::-moz-range-thumb {
+  border: 1px solid #000000;
+  outline: 1.5px solid #000000;
+  outline-offset: 0.125rem;     
+}
+
+.slider-completion::-webkit-slider-thumb{
+  box-shadow: -200px 0 0 200px rgba(255, 0, 46, 0.1);
+}
+
+.slider-difficulty::-webkit-slider-thumb{
+  box-shadow: -200px 0 0 200px rgba(135, 0, 199, 0.25);
+}
+
+/***** End Styling for Sliders *****/
+
+.button1 {
+  grid-column: 1 / 2;
+}
+
+.button2 {
+  grid-column: 2 / 3;
+}
+
+.button3 {
+  grid-column: 3 / 4;
+}
+
+#due-color {
+  color: #FF002E;
+}
+
+#notes {
+  text-align: left;
+}
