--- a/templates/AssignmentPages(Emily)/ViewAssignment.html
+++ b/templates/AssignmentPages(Emily)/ViewAssignment.html
@@ -27,10 +27,10 @@
         <input class="form-input" type="text" id="course-name" name="course-name"/>
 
         <label class="form-label" for="completion">Completion:</label>
-        <input class="slider-completion" type="range" id="completion" name="completion" min="0" max="100">
+        <input class="slider-completion" type="range" id="completion" name="completion" min="0" max="100" />
 
         <label class="form-label" for="difficulty">Difficulty:</label>
-        <input class="slider-difficulty" type="range" id="difficulty" name= "difficulty" min="0" max="100">
+        <input class="slider-difficulty" type="range" id="difficulty" name= "difficulty" min="0" max="100" />
 
         <label class="form-label" for="hw-link">Link:</label>
         <input class="form-input" type="text" id="hw-link" name="hw-link" />
