--- a/templates/ClassPages(Po-Hsiang)/EditClass.html
+++ b/templates/ClassPages(Po-Hsiang)/EditClass.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AddClass</title>
+    <title>EditClass</title>
     <script type="module" src="Class.js" defer></script>
     <link rel="stylesheet" href="Class.css" />
   </head>
