--- a/templates/MainPage(Makar)/MainPage.css
+++ b/templates/MainPage(Makar)/MainPage.css
@@ -267,12 +267,13 @@ body {
 }
 
 #arrow-right{
+    display: flex;
     color:#000000;
     background-color: #000000;
     position: absolute;
-    width: 10vw;
-    height: 10vh;
-    transform: scale(1, 0.2);
+    width: 10vw; 
+    height: 10vh; 
+    stroke-width: 1;
     clip-path: path("M 10.279 17.769 Q 27.332 -16.337 44.385 17.769 L 47.351 23.701 Q 64.404 57.807 30.298 57.807 L 24.366 57.807 Q -9.74 57.807 7.313 23.701 Z");
 }
 
