--- a/src/App.css
+++ b/src/App.css
@@ -221,7 +221,7 @@ body {
 
 .event-elem {
   overflow: hidden;
-  left: calc(2%-1px);
+  left: 2%;
   width: 96%;
   position: absolute;
   border-radius: calc((91.6vh) / 33);
