removed shadow from arrows

--- a/src/App.css
+++ b/src/App.css
@@ -278,8 +278,8 @@ body {
   border-top: min(8vh, 10vw) solid transparent;
   border-bottom: min(8vh, 10vw) solid transparent; 
   border-left: min(8vh, 10vw) solid #0000003e;
-  box-shadow: 0vh 0.42vh 0.42vh rgba(0, 0, 0, 0.25);
-  border-radius: min(8vh, 10vw);
+  /* box-shadow: 0vh 0.42vh 0.42vh rgba(0, 0, 0, 0.25); */
+  /* border-radius: min(8vh, 10vw); */
 }
 
 #arrow-left{
@@ -291,8 +291,8 @@ body {
   border-top: min(8vh, 10vw) solid transparent;
   border-bottom: min(8vh, 10vw) solid transparent; 
   border-right: min(8vh, 10vw) solid #0000003e;
-  box-shadow: 0vh 0.42vh 0.42vh rgba(0, 0, 0, 0.25);
-  border-radius: min(8vh, 10vw);
+  /* box-shadow: 0vh 0.42vh 0.42vh rgba(0, 0, 0, 0.25);
+  border-radius: min(8vh, 10vw); */
 }
 
 
