--- a/src/App.css
+++ b/src/App.css
@@ -266,7 +266,7 @@ body {
 }
 
 .progress-bar-deadline {
-  background-color: rgba(255, 0, 46, 0.1);
+  background-color: rgba(255, 0, 46, 0.4)
 }
 
 #arrow-right{
@@ -345,7 +345,7 @@ body {
 
   font-family: 'Segoe UI';
   font-style: italic;
-  font-size: 22px;
+  font-size: 1.45vw;
   font-weight: 200;
   letter-spacing: 0.03em;
 
@@ -369,7 +369,7 @@ body {
 
   font-family: 'Segoe UI';
   font-style: italic;
-  font-size: 18px;
+  font-size: 1.45vw;
   font-weight: 200;
   text-align: center;
 
@@ -397,7 +397,7 @@ body {
 
   font-family: 'Segoe UI';
   font-style: italic;
-  font-size: 18px;
+  font-size: 1.45vw;
   font-weight: 200;
   text-align: center;
 
@@ -444,9 +444,9 @@ input[type="range"] {
 
   background: transparent;
   cursor: pointer;
-  height: 40px;
   border-radius: 30px;
   overflow: hidden;
+
   box-shadow: 0px 0.5px 2px rgba(0, 0, 0, 0.25);
 }
 
@@ -456,9 +456,9 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
 
-  background-color: #EEEEEE;
-  height: 40px;
-  width: 16px;  
+  background-color: #E6E6E6;
+  height: 8vh;
+  width: 1.3vw;
   border-radius: 20px;
   overflow: visible;
 }
@@ -468,9 +468,11 @@ input[type="range"]::-moz-range-thumb {
   border: none; /*Removes extra border that FF applies*/
   border-radius: 0; /*Removes default border-radius that FF applies*/
 
-  background-color: #EEEEEE;
-  height: 2rem;
-  width: 16px;
+  background-color: #E6E6E6;
+  height: 8vh;
+  width: 1.3vw;
+  border-radius: 20px;
+  overflow: visible;
 }
 
 /*** Focus Styles ***/
@@ -481,29 +483,29 @@ input[type="range"]:focus {
 
 /* Chrome, Safari, Opera, and Edge Chromium */
 .slider-completion:focus::-webkit-slider-thumb {
-  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1) inset, -200px 0 0 192px rgba(255, 0, 46, 0.1);
+  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.3) inset, -300px 0 0 292px rgba(255, 0, 46, 0.6);
 }
 
 /* Firefox */
 .slider-completion:focus::-moz-range-thumb {
-  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1) inset, -200px 0 0 192px rgba(255, 0, 46, 0.1);
+  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.3) inset, -300px 0 0 292px rgba(255, 0, 46, 0.6);
 }
 
 .slider-difficulty:focus::-webkit-slider-thumb {
-  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1) inset, -200px 0 0 192px rgba(135, 0, 199, 0.25);
+  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.3) inset, -300px 0 0 292px rgba(135, 0, 199, 0.4);
 }
 
 /* Firefox */
 .slider-difficulty:focus::-moz-range-thumb {
-  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1) inset, -200px 0 0 192px rgba(135, 0, 199, 0.25);
+  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.3) inset, -300px 0 0 292px rgba(135, 0, 199, 0.4);
 }
 
 .slider-completion::-webkit-slider-thumb{
-  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1), -200px 0 0 192px rgba(255, 0, 46, 0.1);
+  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1), -300px 0 0 292px rgba(255, 0, 46, 0.6);
 }
 
 .slider-difficulty::-webkit-slider-thumb{
-  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1), -200px 0 0 192px rgba(135, 0, 199, 0.25);
+  box-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.1), -300px 0 0 292px rgba(135, 0, 199, 0.4);
 }
 
 /***** End Styling for Sliders *****/
